@@ -12,7 +12,6 @@
 
 typedef struct _project {
   char name[DEFAULT_LENGTH];
-  char description[DEFAULT_LENGTH];
   char home_url[DEFAULT_LENGTH];
   char smtp_server[DEFAULT_LENGTH];
   int smtp_port;
